1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: set version to 2.2.5.

1999-10-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: set version to 2.2.4.

1999-10-02  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.c (StartupStuff): add support for StartFunction
	* fvwm/function.c (setPath, setImagePath): new functions for ImagePath
	* NEWS, fvwm/fvwm2.1: document StartFunction & ImagePath support

	* fvwm/events.c (HandlePropertyNotify): fix cut-and-paste typo

1999-10-02  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandlePropertyNotify): limits names of icons/windows
	to 200 characters to prevent hanging X server

1999-22-06  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/move.c (InteractiveMove): Small interactive move fix (bug #377)

Thu May 27 07:38:11 1999  DanEspen  <dje@blue>

	* fvwm/fvwm2.1 (EdgeThickness): Updated man pages, EdgeThickness
	can be used at any time.

	* NEWS: Updated news for 2.2.2 release.

	* fvwm/complex.c (expand): Applied patch from Brad for empty args.

1999-05-10  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* configure.in: set version to 2.2.2.

1999-05-10  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* utils/fvwmrc_convert: fixes by Julian Gilbey; updated to
	cvs version 1.4.

1999-03-17  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* INSTALL.fvwm: add note about include directories for optional
	libraries.

1999-03-16  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/menus.c (DoMenusOverlap): Use real numbers for the width
	modifier to avoid excessive roundoff.

1999-02-28  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

        * libs/ModParse.c (GetArgument): fix GetArgument for quoted args.
        (DoPeekArgument): new function needed in GetArgument.
	Use safemalloc instead of malloc ( change copied from
	modules/FvwmEvent/Parse.c ).
        (PeekArgument): now call DoPeekArgument.

        * fvwm/move.c (InteractiveMove): fix behaviour of