@@ -1,3 +1,8 @@
+2000-01-10  Dan Espen  <dane@mk.telcordia.com>
+
+	* libs/Picture.c: Fix colorlimit for case when there is only monochrome
+	or grayscale in the pixmap.
+
 1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* configure.in: set version to 2.2.5.
